--- a/public/css/vars.less
+++ b/public/css/vars.less
@@ -10,6 +10,7 @@
 @button-color: rgba(35, 89, 156, 0.78);
 @header-background: rgba(73, 75, 77, 0.15);
 @profit-background-color: rgba(255, 255, 255, 0.01);
+@transparent-color: rgba(255, 255, 255, 0);
 @text-hover-color: #adb3b7;
 @line-color: rgba(255, 255, 255, 0.33);
 @small-screens: ~"only screen and (min-width: 200px)  and (max-width: 720px)";
